[package]
name = "run_billy_run"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
bevy = "0.8"
bevy_ecs_ldtk = "0.4.0"
ldtk_rust = "0.6.0"
serde_json = "1.0.85"
anyhow = "1.0.63"
bevy_rapier2d = "0.18.0"